# picolo

./: .gitignore  Cargo.toml  README.md
blabla/: Cargo.toml
blabla/src/: main.rs
doc/: README.html
src/: lib.rs  listops.rs  main.rs  plot.rs  readimg.rs  split.rs  tests.rs
