[package]
name = "picolo"
version = "0.2.5"
authors = ["Adam"]
homepage = "https://github.com/BlushyTears/picolo"
repository = "https://github.com/BlushyTears/picolo"
documentation = "https://docs.rs/picolo"

edition = "2021"
description = "A simple crate for breaking down images into its bareboned data. Uses the fantastic image crate."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
vector2d = "2.2.0"

